--- a/Mila/css/style.css
+++ b/Mila/css/style.css
@@ -199,7 +199,7 @@ a {
 }
 /* ------------------------------- END RECURENTES -- */
 header {
-  height: 35vh;
+  height: 50vh;
   padding: 2%;
   display: flex;
   flex-direction: column;
@@ -257,22 +257,31 @@ header .main .content .left {
   width: 40%;
   display: flex;
   justify-content: center;
+  align-items: flex-end;
 }
 header .main .content .right {
   width: 40%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 5%;
 }
 header .main .content .right h1 {
   font-family: 'krub', sans-serif;
-  font-style: 1rem;
+  font-size: 2.5rem;
   font-weight: 600;
 }
 header .main .content .right p {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+header .main .content .right a {
+  background-color: #d6bb73;
+  padding: 2% 4%;
+  width: fit-content;
+  font-size: 1rem;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 header .main .divider {
   height: 20%;
