--- a/Mila/css/style.less
+++ b/Mila/css/style.less
@@ -177,31 +177,34 @@ header{
             display: flex;
             justify-content: space-between;
             .left{
-                width: 40%;
+                width: 50%;
                 display: flex;
                 justify-content: center;
                 align-items: flex-end;
             }
             .right{
-                width: 40%;
+                width: 50%;
                 display: flex;
                 flex-direction: column;
                 justify-content: flex-start;
-                gap: 5%;
+                gap: 8%;
                 h1{
                     font-family: 'krub', sans-serif;
                     font-size: 2.5rem;
                     font-weight: @semibold;
                 }
                 p{
-                    font-size: 1rem;
+                    font-family: 'krub', sans-serif;
+                    font-size: 1.8rem;
+                    font-weight: @medium;
                     line-height: 1.5rem;
                 }
                 a{
+                    align-self: center;
                     background-color: @luxant;
                     padding: 2% 4%;
                     width: fit-content;
-                    font-size: 1rem;
+                    font-size: 1.3rem;
                     font-weight: @semibold;
                     text-transform: uppercase;
                 }
